--- a/shop/templates/shop/index.html
+++ b/shop/templates/shop/index.html
@@ -18,5 +18,36 @@
     </div>
     {% endfor %}
 </div>
-
-{% endblock %}
+<!-- Pagination Section -->
+<nav aria-label="Page navigation">
+    <ul class="pagination justify-content-center">
+      {% if product_objects.has_previous %}
+        <li class="page-item">
+          <a class="page-link" href="?page=1" aria-label="First">
+            <span aria-hidden="true">&laquo;&laquo;</span>
+          </a>
+        </li>
+        <li class="page-item">
+          <a class="page-link" href="?page={{ product_objects.previous_page_number }}" aria-label="Previous">
+            <span aria-hidden="true">&laquo;</span>
+          </a>
+        </li>
+      {% endif %}
+ 
+      <li class="page-item disabled"><span class="page-link">Page {{ product_objects.number }} of {{ product_objects.paginator.num_pages }}</span></li>
+ 
+      {% if product_objects.has_next %}
+        <li class="page-item">
+          <a class="page-link" href="?page={{ product_objects.next_page_number }}" aria-label="Next">
+            <span aria-hidden="true">&raquo;</span>
+          </a>
+        </li>
+        <li class="page-item">
+          <a class="page-link" href="?page={{ product_objects.paginator.num_pages }}" aria-label="Last">
+            <span aria-hidden="true">&raquo;&raquo;</span>
+          </a>
+        </li>
+      {% endif %}
+    </ul>
+  </nav>
+  {% endblock %}
