--- a/shop/templates/shop/base.html
+++ b/shop/templates/shop/base.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="{% static 'shop/shop-style.css' %}">
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <title>{% block title %}EcomSite{% endblock %}</title>
 </head>
 <body>
@@ -30,11 +31,15 @@
                 <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
+                <button type="button" data-html="true" id="cart" class="btn btn-link nav-link" data-container="body" data-toggle="popover" data-placement="bottom" data-html="true" title="Shopping Cart" data-content="{% block cart_content %}Your cart is empty.{% endblock %}">
+                    Cart (0)
+                </button>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" href="#">Login</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Logout</a>
-            </li>
             </li>
         </ul>
     </div>
@@ -43,10 +48,52 @@
 <div class="container mt-5">
     {% block content %}{% endblock %}
 </div>
-
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+
+
 </body>
+
+<!-- Include jQuery -->
+<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+
+<!-- Include Popper.js -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+
+<!-- Include Bootstrap JS -->
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+
+<!-- Your script -->
+<script>
+    $(document).ready(function() {
+        displayCart(cart);
+        console.log(cart);
+        // Define displayCart function
+        function displayCart(cart) {
+            var cartString = "";
+            var cartIndex = 1;
+            for (var x in cart) {
+                cartString += cartIndex.toString() + ". " +
+                    document.getElementById("nm" + x).innerHTML + " Qty: " + cart[x] + "<br>";
+                cartIndex++;
+            }
+            if (cartIndex === 1) {
+                cartString = "<h5>Your Cart Is Empty!</h5>";
+            }
+            else{
+                // Add a button inside the popover content
+            cartString += "<a href='/checkout' class='btn btn-primary mt-2' id='checkout'>Checkout</a>";
+            }
+
+            document.getElementById("cart").setAttribute('data-content', cartString);
+            // Enable Bootstrap popover
+            $('[data-toggle="popover"]').popover();
+        }
+        displayCart(cart);
+    });
+</script>
+
+
 </html>
