--- a/shop/templates/shop/index.html
+++ b/shop/templates/shop/index.html
@@ -10,13 +10,13 @@
         <div class="card shadow" style="background-color: #e2e3e5; color: #343a40;">
             <img src="{{ product.image }}" style="height: 200px; width: 100%; object-fit: cover;" class="card-img-top" alt="Product Image">
             <div class="card-body">
-                <h5 class="card-title">{{ product.title }}</h5>
+                <h5 class="card-title" id="nm{{product.id}}">{{ product.title }}</h5>
                 <p class="card-text">Price: ${{ product.price }}</p>
                 <div class="d-flex justify-content-between align-items-center">
                     <!-- Add "View" button with a link to the product detail page -->
                     <a href="{{product.id}}" class="btn btn-primary" style="background-color: #007bff;">View</a>
                     <!-- Add "Add to Cart" button with an onclick event -->
-                    <button class="btn btn-success" style="background-color: #4caf50;">Add to Cart</button>
+                    <button class="btn btn-success atc" id="{{product.id}}" style="background-color: #4caf50;">Add to Cart</button>
                 </div>
             </div>
         </div>
@@ -56,5 +56,25 @@
       {% endif %}
     </ul>
 </nav>
-
+<script>
+  if(localStorage.getItem('cart')==null){
+    var cart = {};
+  }
+  else{
+    cart = JSON.parse(localStorage.getItem('cart'));
+  }
+  $(document).on('click','.atc',function (){
+     var item_id = this.id;
+     
+     if(cart[item_id] != undefined){
+      cart[item_id] = cart[item_id]+1;
+     }
+     else{
+      cart[item_id]=1;
+     }
+     console.log(item_id,cart[item_id]);
+     localStorage.setItem('cart',JSON.stringify(cart));
+     document.getElementById('cart').innerHTML = "Cart("+(Object.keys(cart).length)+")";
+     });
+</script>
 {% endblock %}
