--- a/shop/templates/shop/checkout.html
+++ b/shop/templates/shop/checkout.html
@@ -15,20 +15,26 @@
                 <div class="mt-3">
                     <h1>Order Summary</h1>
                     <div class="row">
-                        <div class="col-6">
-                            <h6>Item Names</h6>
+                        <div class="col-4">
+                            <h4>Item Names</h4>
                             <ul class="list-group" id="item_list">
                                 <!-- items -->
                             </ul>
                         </div>
-                        <div class="col-6">
-                            <h6>Quantities</h6>
+                        <div class="col-4">
+                            <h4>Quantities</h4>
                             <ul class="list-group" id="quantity_list">
                                 <!-- quantities -->
                             </ul>
                         </div>
+                        <div class="col-4">
+                            <h4>Price</h4>
+                            <ul class="list-group" id="price_list">
+                                <!-- price -->
+                            </ul>
+                        </div>
                     </div>
-                    <p class="mt-3"><strong>Total: <span id="total_price"></span></strong></p>
+                    <p class="mt-3"><strong>Total: $<span id="total_price"></span></strong></p>
                 </div>
                 <form class="mt-5" method="POST">
                     {% csrf_token %}
@@ -66,6 +72,10 @@
                             <label for="inputZip">Zip</label>
                             <input type="text" class="form-control" id="zipcode" name="zipcode">
                         </div>
+                        <div class="form-group col-md-2">
+                            <label for="inputZip">Total_Price</label>
+                            <input readonly="" type="text" class="form-control" id="total" name="total">
+                        </div>
                     </div>
                     <button type="submit" class="btn btn-primary">Proceed to Checkout</button>
                 </form>
@@ -82,18 +92,27 @@
         } else {
             cart = JSON.parse(localStorage.getItem('cart'));
         }
+        let total_price = 0;
 
         for (item in cart) {
             quantity = cart[item][0];
             name = cart[item][1];
+            price = cart[item][2];
+            total_price = total_price+price;
 
             itemString = `<li class='list-group-item'>${name}</li>`;
             $('#item_list').append(itemString);
 
             quantityString = `<li class='list-group-item'>${quantity}</li>`;
             $('#quantity_list').append(quantityString);
+
+            priceString = `<li class='list-group-item'>${price}</li>`;
+            $('#price_list').append(priceString);
         }
+        total_priceString = `${total_price}`;
+        $('#total_price').append(total_priceString);
         $('#items').val(JSON.stringify(cart));
+        $('#total').val(total_price);
     </script>
 </body>
 
