--- a/shop/templates/shop/base.html
+++ b/shop/templates/shop/base.html
@@ -1,7 +1,5 @@
 {% load static %}
 
-<!-- base.html -->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -15,7 +13,7 @@
 <body>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">EcomSite</a>
+    <a class="navbar-brand" href="{% url 'shop:index' %}">EcomSite</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -27,13 +25,17 @@
                     <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name = "item_name">
                     <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
                 </form>
+            </li>
             <li class="nav-item active">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="{% url 'shop:index' %}">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
                 <button type="button" data-html="true" id="cart" class="btn btn-link nav-link" data-container="body" data-toggle="popover" data-placement="bottom" data-html="true" title="Shopping Cart" data-content="{% block cart_content %}Your cart is empty.{% endblock %}">
                     Cart (0)
                 </button>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'accounts:register' %}">Sign Up</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Login</a>
@@ -45,16 +47,25 @@
     </div>
 </nav>
 
+<!-- Display messages -->
+<div class="container mt-3">
+    {% if messages %}
+        <div class="alert alert-success" role="alert">
+            {% for message in messages %}
+                {{ message }}
+            {% endfor %}
+        </div>
+    {% endif %}
+</div>
+
 <div class="container mt-5">
     {% block content %}{% endblock %}
 </div>
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-
-
-</body>
 
 <!-- Include jQuery -->
 <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
@@ -83,7 +94,7 @@
             }
             else{
                 // Add a button inside the popover content
-            cartString += "<a href='/checkout' class='btn btn-primary mt-2' id='checkout'>Checkout</a>";
+                cartString += "<a href='/checkout' class='btn btn-primary mt-2' id='checkout'>Checkout</a>";
             }
 
             document.getElementById("cart").setAttribute('data-content', cartString);
@@ -94,5 +105,5 @@
     });
 </script>
 
-
+</body>
 </html>
