--- a/shop/templates/shop/base.html
+++ b/shop/templates/shop/base.html
@@ -36,6 +36,9 @@
             </li>
             {% if user.is_authenticated %}
             <li class="nav-item">
+                <a class="nav-link" href="{% url 'shop:user_orders' %}">Orders</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" href="{% url 'accounts:logout' %}">Logout</a>
             </li>
             {% else %}
