--- a/shop/templates/shop/view_cart.html
+++ b/shop/templates/shop/view_cart.html
@@ -1,5 +1,3 @@
-<!-- view_cart.html -->
-
 {% extends 'shop/base.html' %}
 
 {% block title %}Cart{% endblock %}
@@ -7,26 +5,79 @@
 {% block content %}
 <div class="container mt-5">
     <h1>Cart Items</h1>
-    <table class="table">
-        <thead>
-            <tr>
-                <th scope="col">#</th>
-                <th scope="col">Item Name</th>
-                <th scope="col">Quantity</th>
-                <th scope="col">Price</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for cart_item in cart_items %}
-            <tr>
-                <th scope="row">{{ forloop.counter }}</th>
-                <td>{{ cart_item.title }}</td>
-                <td>{{ cart_item.quantity }}</td>
-                <td>${{ cart_item.price }}</td>
-            </tr>
-            {% endfor %}
-        </tbody>
-    </table>
-    <p>Total: ${{ total }}</p>
+    {% if cart_items %}
+        <table class="table">
+            <thead>
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Item Name</th>
+                    <th scope="col">Quantity</th>
+                    <th scope="col">Price</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for cart_item in cart_items %}
+                <tr>
+                    <th scope="row">{{ forloop.counter }}</th>
+                    <td>{{ cart_item.title }}</td>
+                    <td>{{ cart_item.quantity }}</td>
+                    <td>${{ cart_item.price }}</td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+        <p>Total: ${{ total }}</p>
+        <form class="mt-5" method="POST">
+            {% csrf_token %}
+            <h2>Checkout-Form</h2>
+            <div class="form-row">
+                <input type="hidden" id="items" name="items">
+                <div class="form-group col-md-6">
+                    <label for="inputEmail4">Name</label>
+                    <input type="text" class="form-control" name="name" id="name" placeholder="John">
+                </div>
+                <div class="form-group col-md-6">
+                    <label for="inputPassword4">Email</label>
+                    <input type="email" class="form-control" id="email" name="email" placeholder="john@demo.com">
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="inputAddress">Address</label>
+                <input type="text" class="form-control" id="address" name="address" placeholder="1234 Main St">
+            </div>
+            <div class="form-group">
+                <label for="inputAddress2">Address 2</label>
+                <input type="text" class="form-control" id="address2" name="address2" placeholder="Apartment, studio, or floor">
+            </div>
+            <div class="form-row">
+                <div class="form-group col-md-6">
+                    <label for="inputCity">City</label>
+                    <input type="text" class="form-control" id="city" name="city">
+                </div>
+                <div class="form-group col-md-4">
+                    <label for="inputState">State</label>
+                    <input type="text" class="form-control" id="state" name="state">
+                </div>
+                <div class="form-group col-md-2">
+                    <label for="inputZip">Zip</label>
+                    <input type="text" class="form-control" id="zipcode" name="zipcode">
+                </div>
+                <div class="form-group col-md-2">
+                    <label for="inputZip">Total Price</label>
+                    <div class="input-group">
+                        <div class="input-group-prepend">
+                            <div class="input-group-text">$</div>
+                        </div>
+                        <input type="text" class="form-control" readonly value="{{ total }}">
+                    </div>
+                </div>
+            </div>
+            <button type="submit" class="btn btn-primary">Proceed to Checkout</button>
+        </form>
+    {% else %}
+        <br>
+        <br>
+        <h3>Your cart is empty.</h3>
+    {% endif %}
 </div>
 {% endblock %}
